--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>olaf</title>
+    <title>OLAF</title>
 </head>
 <body>
-    <h1>olaf</h1>
+    <h1>OLAF</h1>
     <p>I like warm hugs</p>
 </body>
 </html>
